# Athenas-Pallas

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  DATABENTO_ENGINE_LIMITS.md  ENGINE_FLAWS.md  README.md  RELEASING.md  STYLE.md  backtest.toml  backtest.toml.example  catalog.toml.example  package.json  release-plz.toml  sweep.toml.example
.github/workflows/: ci.yml  publish-crates-io.yml
.tectonix/: rules.toml  session-baseline.json
athenas-pallas/: Cargo.toml
athenas-pallas/benches/: backtest_hotpath.rs
athenas-pallas/examples/: backtest_csv.rs  live_binance.rs  paper_binance.rs  paper_trading.rs  stress_backtest.rs  system_config.json  system_config.rs
athenas-pallas/src/: audit.rs  bar.rs  control.rs  engine.rs  error.rs  events.rs  interval.rs  lib.rs  metrics.rs  replica.rs  risk.rs  source.rs  state.rs  strategy.rs  system.rs  types.rs
athenas-pallas/src/backtest/: bar.rs  batch.rs  config.rs  config_file.rs  cpp_build.rs  interval.rs  lifecycle.rs  merge.rs  mod.rs  pbar.rs  replay.rs  report.rs  runner.rs  session.rs  source_loader.rs  strategy_resolver.rs
athenas-pallas/src/backtest/sources/: csv_common.rs  future.rs  fx.rs  mod.rs  yahoo.rs
athenas-pallas/src/calendar/: mod.rs
athenas-pallas/src/connectors/: binance_spot.rs  binance_user_data.rs
athenas-pallas/src/data/: databento.rs  mod.rs
athenas-pallas/src/data/fetch/: alpha_vantage.rs  binance.rs  intervals.rs  mod.rs  yahoo.rs
athenas-pallas/src/engine/: commands.rs  mod.rs  replay.rs  sync.rs
athenas-pallas/src/events/: metadata.rs  mod.rs
athenas-pallas/src/execution/: binance_live.rs  fills.rs  live.rs  mod.rs  paper.rs  sim.rs  sync_paper.rs
athenas-pallas/src/instrument/: asset.rs  config.rs  filter.rs  index.rs  kind.rs  mod.rs  pricing.rs  registry.rs  ticks.rs
athenas-pallas/src/integration/: mod.rs
athenas-pallas/src/metrics/: ledger.rs  mod.rs  performance.rs  positions.rs
athenas-pallas/src/oms/: mod.rs
athenas-pallas/src/results/: mod.rs
athenas-pallas/src/state/: account.rs  market.rs  mod.rs
athenas-pallas/src/strategy/: external.rs  mod.rs  protocol.rs  sizing.rs
athenas-pallas/tests/: backtest_csv_flow.rs  binance_live_wiremock.rs  cancel_backtest.rs  config_roundtrip.rs  control_http.rs  cpp_strategy_golden.rs  equity_ohlcv_backtest.rs  external_strategy_golden.rs  external_strategy_protocol.rs  flatten_flow.rs  futures_multiplier_pnl.rs  futures_short_backtest.rs  fx_l1_backtest.rs  jsonl_replay_flow.rs  multi_instrument_merge.rs  paper_flow.rs  replica_flow.rs  stop_orders_backtest.rs  toml_config_load.rs  yahoo_equity_backtest.rs
athenas-pallas/tests/common/: fixtures.rs  mod.rs
athenas-pallas/tests/fixtures/: README.md  golden_sma_results.json  system_config.json  yahoo_chart.json
athenas-pallas/tests/fixtures/data/: AAPL_1d.csv  BTCUSDT_1d.pbar  EXAMPLE_1d.csv  EXAMPLE_1d.pbar  events_sample.jsonl
data/: BTCUSDT_1d.csv  EURUSD_sample.csv  README.md
docs/: ALGO_TESTING.md  ARCHITECTURE.md  OPTIMIZATION_AUDIT.md  PERFORMANCE.md  VERIFICATION_AUDIT.md  baseline_metrics.txt  baseline_run.txt  bench_baseline.json  benchmarks.txt
docs/schema/: dsql_backtest_results.sql  dsql_example_queries.sql
examples/backtest_csv/: Cargo.toml
examples/backtest_csv/src/: main.rs
examples/live_binance/: Cargo.toml
examples/live_binance/src/: main.rs
examples/paper_binance/: Cargo.toml
examples/paper_binance/src/: main.rs
examples/paper_trading/: Cargo.toml
examples/paper_trading/src/: main.rs
examples/system_config/: Cargo.toml  system_config.json
examples/system_config/src/: main.rs
pallas-app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
pallas-app/src/: App.css  App.tsx  index.css  types.ts
pallas-app/src-tauri/: Cargo.toml  tauri.conf.json
pallas-app/src-tauri/capabilities/: default.json
pallas-app/src-tauri/data/: MSFT_live.csv
pallas-app/src-tauri/icons/: icon.icns
pallas-app/src-tauri/src/: commands.rs  credentials.rs  data_tools.rs  dto.rs  lib.rs  main.rs  session.rs  system_config.rs  trading_session.rs
pallas-app/src/components/: ConfigForm.tsx  EquityChart.tsx  FetchPanel.tsx  FillsTable.tsx  MetricsPanel.tsx  RunPanel.tsx
pallas-app/src/components/shared/: ConnectionBadges.tsx  ControlDeck.tsx  FillLogTable.tsx  FlattenConfirmDialog.tsx  LiveEquityChart.tsx  OpenOrdersTable.tsx  PositionsBalancesCard.tsx
pallas-app/src/components/ui/: StatusBanner.tsx  field.tsx  input-group.tsx  progress.tsx  resizable.tsx
pallas-app/src/features/backtest/: BacktestPage.tsx  ConfigForm.tsx  EquityChart.tsx  FillsTable.tsx  MetricsPanel.tsx  RunPanel.tsx
pallas-app/src/features/data-studio/: DataStudioPage.tsx
pallas-app/src/features/live/: LivePage.tsx
pallas-app/src/features/paper/: PaperPage.tsx
pallas-app/src/features/quick-start/: QuickStartWizard.tsx
pallas-app/src/features/results/: ResultsPage.tsx
pallas-app/src/features/settings/: SettingsPage.tsx
pallas-app/src/hooks/: useAppNavigation.ts  useBacktestSession.ts  useTradingSession.ts
pallas-app/src/layouts/: AppShell.tsx
pallas-app/src/lib/: configValidation.ts  errorMessages.ts  paperValidation.ts
scripts/: bootstrap.mjs  dev.mjs  run_sma_backtest.ps1  run_sma_backtest.sh  setup.mjs
tools/athenas-pallas-tools/: Cargo.toml
trading/: .gitignore  protocol.md
trading/_sdk/cpp/: pallas_strategy.hpp
trading/_sdk/python/: pallas_strategy.py  test_pallas_strategy.py
trading/_template/: strategy.py
trading/cpp/strategies/simple_sma/: CMakeLists.txt  main.cpp
trading/sdk/: pallas_strategy.py
trading/simple_sma/: README.md  strategy.py
trading/simple_sma_cpp/: .gitignore  CMakeLists.txt  main.cpp
trading/simple_sma_cpp/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
trading/strategies/_template/: strategy.py
trading/strategies/simple_sma/: README.md  strategy.py
