[workspace]
resolver = "3"
members = [
    "athenas-pallas",
    "pallas-app/src-tauri",
]

[workspace.package]
version = "3.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DevomB/Athenas-Pallas"

[workspace.dependencies]
athenas-pallas = { path = "athenas-pallas", version = "3.1.0" }

async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "net", "io-util"] }
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
tracing = "0.1"
rust_decimal = { version = "1", features = ["serde-with-str", "maths"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
csv = "1.3"
url = "2.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
smol_str = "0.3"
pin-project = "1.1"

[profile.release]
lto = true
