[workspace]
resolver = "3"
members = [
    "athenas-pallas",
    "tools/athenas-pallas-tools",
]

[workspace.package]
version = "3.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/DevomB/Athenas-Pallas"

[workspace.dependencies]
athenas-pallas = { path = "athenas-pallas", version = "3.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
rust_decimal = { version = "1", features = ["serde-with-str", "maths"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
csv = "1.3"
url = "2.5"
hex = "0.4"
smol_str = "0.3"

[profile.release]
lto = true
