[package]
name = "athenas-pallas"
description = "Event-driven algorithmic backtesting framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
documentation = "https://docs.rs/athenas-pallas"
homepage = "https://github.com/DevomB/Athenas-Pallas"
keywords = ["trading", "backtest", "strategy", "algo"]
categories = ["algorithms", "simulation"]

[features]
default = []
databento = ["dep:databento", "dep:dotenvy", "dep:reqwest", "dep:sha2", "dep:tokio"]
tracing-full = ["dep:tracing-subscriber"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
rust_decimal = { version = "1", features = ["serde-with-str"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "formatting", "parsing", "macros"] }
uuid = { version = "1", features = ["v4", "serde"] }
csv = "1.3"
smol_str = "0.3"
rustc-hash = "2"
smallvec = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
databento = { version = "0.53", default-features = false, features = ["historical"], optional = true }
dotenvy = { version = "0.15", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["default-tls"], optional = true }
sha2 = { version = "0.10", optional = true }
tokio = { version = "1", features = ["rt", "net", "time", "fs", "io-util"], optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[[bin]]
name = "pallas-backtest"
path = "src/bin/pallas-backtest.rs"

[[example]]
name = "backtest_csv"
path = "examples/backtest_csv.rs"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
criterion = "0.5"

[[bench]]
name = "backtest_hotpath"
harness = false
