[package]
name = "paper_trading"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
athenas-pallas = { workspace = true, features = ["control-server"] }
rust_decimal = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
