[package]
name = "athenas-pallas-tools"
description = "CLI utilities for Athena's Pallas (merge, sweep, resample)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
athenas-pallas = { path = "../../athenas-pallas", version = "3.1.0" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rust_decimal = { version = "1", features = ["serde-with-str"] }
csv = "1.3"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[[bin]]
name = "pallas-merge"
path = "src/bin/pallas-merge.rs"

[[bin]]
name = "pallas-sweep"
path = "src/bin/pallas-sweep.rs"

[[bin]]
name = "pallas-resample"
path = "src/bin/pallas-resample.rs"
